welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: not found: value i
  var valeur=nums(i)
                  ^